tests/ui/lifetime_extern_rust.stderr
error: must be `unsafe fn f` in order to expose explicit lifetimes to C++
 --> tests/ui/lifetime_extern_rust.rs:5:9
  |
1 | #[cxx::bridge]
  | -------------- in this procedural macro expansion
...
5 |         fn f<'a>(&'a self, arg: &str) -> &'a str;
  |         ^^^^^^^^
  |
  = note: this error originates in the attribute macro `cxx::bridge` (in Nightly builds, run with -Z macro-backtrace for more info)
